# quantum-cultivation-story

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/: settings.local.json
Part1/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch08.md  ch09.md  ch10.md  ch11.md  ch12.md  ch13.md  ch14.md  ch15.md  ch16.md  ch17.md  ch18.md  ch19.md  ch20.md  第一阶段详细剧情设计.md  第一阶段详细剧情设计（1-20章）.md
Part2/: ch21.md  ch24.md  ch26.md  ch27.md  ch28.md  第二阶段详细剧情设计.md  第二阶段详细剧情设计（21-40章）.md
Part3/: 第三阶段详细剧情设计.md  第三阶段详细剧情设计（41-60章）.md
Vol1/: ch01.md  ch02.md  ch03.md  ch04.md  ch05.md  ch06.md  ch07.md  ch09.md  ch11.md  ch13.md  ch14.md  ch15.md  ch17.md  ch18.md  ch19.md  ch20.md  第一卷详细剧情设计.md
Vol2/: ch21.md  ch22.md  ch23.md  ch24.md  ch25.md  ch26.md  ch27.md  ch28.md  ch29.md  ch30.md  ch31.md  ch32.md  ch33.md  ch34.md  ch35.md  ch36.md  ch37.md  ch38.md  ch39.md  ch40.md  ch41.md  ch42.md  ch43.md  ch44.md  ch45.md  ch46.md  ch47.md  ch48.md  ch49.md  ch50.md  支线剧情设计.md  第二卷势力暗中活动场景设计.md  第二卷详细剧情设计.md
Vol3/: ch51.md  ch52.md  ch53.md  ch54.md  ch55.md  ch56.md  ch57.md  ch58.md  第三阶段详细剧情设计.md
tools/: MCP_SETUP.md  __init__.py  generate_index.py  mcp_config.json  pyproject.toml  rag_base.py  rag_config.yaml  setup_and_usage.md  story_rag_http.py  story_rag_mcp.py  story_rag_system.py
废稿/: README.md  ch22_old.md  ch23_old.md  ch25_old.md  ch35_old.md
脑洞/: README.md  original-dialogue.md  修士衰退之后：最后一个筑基期修士的悠闲日记.md  叠加态修炼法理论与实践.md  论修真文明的费米悖论：基于多维度灵气场理论的定量分析.md
设定/: 人格图鉴.md  人格机制设定.md  人格设定统一规范.md  人物档案.md  伏笔追踪表.md  内容索引.md  写作规范.md  大纲.md  文档层级关系.md  (+2 more)
(+36 files in other folders)
